--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -42,8 +42,7 @@ h2 {
 	top: 0;
 	width: 100%;
 	background-color: #39454b;
-	height: 4.2em;
-	line-height: 3em;
+	height: 70px;
 	box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
 	}
 
@@ -69,6 +68,36 @@ h2 {
   padding: 10px 10px 10px;
 }
 
+	#nav {
+		position: absolute;
+		right: 0.5em;
+		top: 0;
+		color: #fff;
+		font-family: 'Permanent Marker', cursive;
+        z-index: -1;
+	}
+
+	#nav ul {
+		margin: 0;
+	}
+
+	#nav ul li {
+		display: inline-block;
+		font-size: 25px;
+	}
+
+	#nav ul li a {
+		display: block;
+		color: inherit;
+		text-decoration: none;
+		line-height: 70px;
+		padding: 0 0.5em 0 0.5em;
+		outline: 0;
+	}
+	#nav  .selected {
+	color: #000;
+	background-color: #fff;
+	}
 
 #shade {
     background: rgba(0, 0, 0, 0.7);
