--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1 {
 	font-family: 'Pacifico', cursive;
 	color: #ffffff;
   text-transform: none;
-	font-size: 3em;
+	font-size: 45px;
 }
 
 #header {
@@ -34,16 +34,15 @@ h1 {
 	top: 0;
 	width: 100%;
 	background-color: #39454b;
-	height: 4.2em;
-	line-height: 3em;
+	height: 70px;
 	box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
 	}
 
 #olwibalogo {
   position: absolute;
-  top: -20px;
+  top: -50px;
   left: 0.5em;
-  width: 11em;
+  width: 185px;
   height: auto;
   z-index: 100;
 }
@@ -67,6 +66,36 @@ h1 {
   z-index: 100;
 }
 
+	#nav {
+		position: absolute;
+		right: 0.5em;
+		top: 0;
+		color: #fff;
+		font-family: 'Permanent Marker', cursive;
+        z-index: -1;
+	}
+
+	#nav ul {
+		margin: 0;
+	}
+
+	#nav ul li {
+		display: inline-block;
+		font-size: 25px;
+	}
+
+	#nav ul li a {
+		display: block;
+		color: inherit;
+		text-decoration: none;
+		line-height: 70px;
+		padding: 0 0.5em 0 0.5em;
+		outline: 0;
+	}
+	#nav  .selected {
+	color: #000;
+	background-color: #fff;
+	}
 
 #shade {
     background: rgba(0, 0, 0, 0.7);
