changed logo position

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -48,9 +48,9 @@ h2 {
 
 #olwibalogo {
   position: absolute;
-  top: -20px;
+  top: -50px;
   left: 0.5em;
-  width: 11em;
+  width: 185px;
   height: auto;
   z-index: 100;
 }
