added new blog post and links / updated sytles

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -35,6 +35,15 @@ h2 {
 	font-size: 25px;
 }
 
+p {
+  font-family: 'Raleway', sans-serif;
+}
+
+.list-image {
+  width: 90%;
+  height: auto;
+}
+
 #header {
 	position: fixed;
 	z-index: 90;
