--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -35,6 +35,15 @@ h2 {
 	font-size: 25px;
 }
 
+h2 {
+  margin-bottom: 10px;
+  text-align: center;
+  font-family: 'Permanent Marker', cursive;
+  color: #ffffff;
+  text-transform: none;
+  font-size: 18px;
+}
+
 p {
   font-family: 'Raleway', sans-serif;
 }
