--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,10 @@ h1,h2,h3,h4,h5,h6,p {
 
 }
 
+.code {
+ text-align: left!important;
+  }
+
 /* HEX CONTENT */
 #categories li img{
   left:-100%; right:-100%;
